--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,7 @@
 
 * {
   box-sizing: border-box;
-  /* margin: 0; */
+  margin: 0;
 }
 
 body {
@@ -52,7 +52,7 @@ h1 {
 .background-text {
   position: absolute;
   background-color: var(--light-blue);
-  top: 220px;
+  top: 230px;
   right: 60px;
   padding: 10px 25px 10px 25px;
   font-weight: var(--font-weight);
@@ -60,6 +60,6 @@ h1 {
   font-style: italic;
 }
 
-section {
+/* section {
   display: flex;
-}
+} */
